--- a/backend/.env-copy
+++ b/backend/.env-copy
@@ -11,3 +11,9 @@ EMAIL_PASSWORD=emailpassword
 
 SECRET_KEY=friedchickenisawesome.com
 
+DEBUG=1
+
+ALLOWED_HOSTS='127.0.0.1' 
+
+postgres://USER:PASSWORD@HOST:PORT/NAME
+
