--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.5.2
+dj-database-url==1.2.0
 Django==4.1.4
 django-cors-headers==3.13.0
-django-environ==0.9.0
 djangorestframework==3.14.0
+gunicorn==20.1.0
+psycopg2-binary==2.9.5
+python-dotenv==0.21.0
 pytz==2022.6
 sqlparse==0.4.3
 tzdata==2022.7
