--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.5.2
+Brotli==1.0.9
 dj-database-url==1.2.0
 Django==4.1.4
 django-cors-headers==3.13.0
@@ -9,3 +10,4 @@ python-dotenv==0.21.0
 pytz==2022.6
 sqlparse==0.4.3
 tzdata==2022.7
+whitenoise==6.2.0
