deploy 1v render-netlify

--- a/backend/.env-copy
+++ b/backend/.env-copy
@@ -1,3 +1,6 @@
+# ADD PYTHON_VERSION in your environment vars, like
+# PYTHON_VERSION=3.9.9
+
 # ENVIROMENT VARIABLES
 
 URL_FRONTEND=http://localhost:3000
@@ -13,7 +16,11 @@ SECRET_KEY=friedchickenisawesome.com
 
 DEBUG=1
 
-ALLOWED_HOSTS='127.0.0.1' 
+ALLOWED_HOSTS='*' 
 
-postgres://USER:PASSWORD@HOST:PORT/NAME
+# a PostgreSQL database connection, in Render is 'Internal Database URL'
+DATABASE_URL=postgres://USER:PASSWORD@HOST:PORT/NAME
 
+# admin data configuration in production server, enter in 'yoursite/admin'
+ADMIN_USER=admin
+ADMIN_PASSWORD=admin123456
